# int-prog

./: .ghcid  .gitignore  int-prog.cabal  stack.yaml
example_problems/lp/: CMakeLists.txt  emps.c  emps.html  mps_format.html
example_problems/lp/data/: empstest.mpsc  testprob.mps
src/Numeric/: GLP.hs  LP.hs
