cabal-version:       2.2
name:                int-prog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/int-prog#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Torsten Kemps-Benedix
maintainer:          example@example.com
copyright:           2019 Torsten Kemps-Benedix
category:            Web
build-type:          Simple
extra-source-files:  README.md

library
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5, array, hmatrix, vector, vector-algorithms,
                       formatting, text, containers, unicode-table, display, bytestring
  exposed-modules:     Numeric.LP


